human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_32.wast
(assert_invalid
  (module (func $type-func-value-num-vs-void-after-return
    (return) (i32.const 1)
  ))
  "type mismatch"
)